--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <title>Santiago Segret - Músico</title>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Santiago Segret - Músico">
+  <meta property="og:description" content="Santiago Segret, músico y bandoneonista. Biografía, videos y partituras.">
+  <meta property="og:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
+  <meta property="og:url" content="https://santiagosegret.com.ar">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Santiago Segret - Músico">
+  <meta name="twitter:description" content="Santiago Segret, músico y bandoneonista. Biografía, videos y partituras.">
+  <meta name="twitter:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
 
   <!-- YouTube IFrame Player API (carga async para no bloquear parsing) -->
   <script async src="https://www.youtube.com/iframe_api"></script>
@@ -34,7 +46,7 @@
     <!-- SECCIÓN INICIO -->
     <section class="seccion" id="inicio">
       <div class="hero-title-cool">
-        <a href="#inicio" class="hero-title-name" aria-label="Ir al inicio">Santiago Segret</a>
+        <span class="hero-title-name">Santiago Segret</span>
         <br>
         <span class="hero-title-sub">músico, bandoneonista</span>
       </div>
@@ -384,70 +396,7 @@
           </div>
         </div>
 
-        <style>
-          /* Fondo y estilo general */
-          #actual {
-            background-color: #0f0f0f;
-            padding: 50px 20px;
-            border-radius: 12px;
-            max-width: 850px;
-            margin: 0 auto;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-          }
 
-          /* Título de sección */
-          .seccion-titulo {
-            font-size: 2rem;
-            text-align: center;
-            color: #f5f5f5;
-            margin-bottom: 40px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-          }
-
-          /* Lista de logros */
-          .logros-lista {
-            display: flex;
-            flex-direction: column;
-            gap: 25px;
-          }
-
-          /* Cada logro */
-          .logro-item {
-            display: flex;
-            align-items: flex-start;
-            gap: 20px;
-            padding: 15px 20px;
-            background-color: #1a1a1a;
-            border-left: 5px solid #f39c12;
-            /* borde dorado */
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-          }
-
-          .logro-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(255, 255, 255, 0.15);
-          }
-
-          /* Icono del logro */
-          .logro-icon {
-            font-size: 1.8rem;
-            min-width: 40px;
-            text-align: center;
-            color: #f39c12;
-            /* dorado */
-          }
-
-          /* Detalle del logro */
-          .logro-detalle {
-            font-size: 1rem;
-            color: #f5f5f5;
-            margin: 0;
-            line-height: 1.5;
-          }
-        </style>
         <!-- Pestaña Formación -->
         <div class="tab-pane" id="formacion">
           <h3 class="seccion-titulo">Formación</h3>
@@ -511,67 +460,7 @@
           </div>
         </div>
 
-        <style>
-          /* Fondo y estilo general */
-          #formacion {
-            background-color: #0f0f0f;
-            padding: 50px 20px;
-            border-radius: 12px;
-            max-width: 900px;
-            margin: 0 auto;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            color: #f5f5f5;
-          }
 
-          /* Título de sección */
-          .seccion-titulo {
-            font-size: 2rem;
-            text-align: center;
-            color: #f5f5f5;
-            margin-bottom: 40px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-          }
-
-          /* Cada ítem de formación */
-          .formacion-item {
-            background-color: #1a1a1a;
-            padding: 20px 25px;
-            margin-bottom: 25px;
-            border-left: 5px solid #3498db;
-            /* borde azul para diferenciar ítems */
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-          }
-
-          .formacion-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
-          }
-
-          /* Multimedia */
-          .bio-media {
-            margin-top: 15px;
-            text-align: center;
-          }
-
-          .bio-media iframe,
-          .bio-media img {
-            max-width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.1);
-          }
-
-          /* Epígrafe de multimedia */
-          .epigrafe {
-            font-size: 0.9rem;
-            color: #bdc3c7;
-            margin-top: 8px;
-            text-align: center;
-            font-style: italic;
-          }
-        </style>
 
         <!-- Pestaña Inicios -->
         <div class="tab-pane" id="inicios">
@@ -619,87 +508,7 @@
           </div>
         </div>
 
-        <style>
-          /* Fondo y estilo general */
-          #inicios {
-            background-color: #0f0f0f;
-            padding: 50px 20px;
-            border-radius: 12px;
-            max-width: 900px;
-            margin: 0 auto;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            color: #f5f5f5;
-          }
 
-          /* Título de sección */
-          .seccion-titulo {
-            font-size: 2rem;
-            text-align: center;
-            color: #f5f5f5;
-            margin-bottom: 40px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-          }
-
-          /* Cada ítem de inicio */
-          .inicio-item {
-            background-color: #1a1a1a;
-            padding: 20px 25px;
-            margin-bottom: 25px;
-            border-left: 5px solid #9b59b6;
-            /* borde violeta */
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-          }
-
-          .inicio-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
-          }
-
-          /* Multimedia */
-          .bio-media {
-            margin-top: 15px;
-            text-align: center;
-          }
-
-          .bio-media iframe,
-          .bio-media img {
-            max-width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.1);
-          }
-
-          /* Epígrafe de multimedia */
-          .epigrafe {
-            font-size: 0.9rem;
-            color: #bdc3c7;
-            margin-top: 8px;
-            text-align: center;
-            font-style: italic;
-          }
-
-          /* Audio */
-          .audio-container {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            margin-top: 15px;
-          }
-
-          .audio-item {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-          }
-
-          .audio-item audio {
-            width: 100%;
-            max-width: 320px;
-            border-radius: 5px;
-          }
-        </style>
 
 
     </section>
@@ -741,75 +550,6 @@
         </div>
       </div>
     </section>
-
-    <style>
-      /* Estilo general de la sección */
-      #premios {
-        background-color: #0f0f0f;
-        padding: 50px 20px;
-        border-radius: 12px;
-        max-width: 800px;
-        margin: 0 auto;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-      }
-
-      /* Título de sección */
-      .seccion-titulo {
-        font-size: 2rem;
-        text-align: center;
-        color: #f5f5f5;
-        margin-bottom: 40px;
-        font-weight: 700;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-      }
-
-      /* Lista de premios */
-      .premios-lista {
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-      }
-
-      /* Cada premio */
-      .premio-item {
-        display: flex;
-        align-items: flex-start;
-        gap: 20px;
-        padding: 15px 20px;
-        background-color: #1a1a1a;
-        border-left: 5px solid #e74c3c;
-        /* acento rojo */
-        border-radius: 8px;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-      }
-
-      .premio-item:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 20px rgba(255, 255, 255, 0.15);
-      }
-
-      /* Año del premio */
-      .premio-ano {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #e74c3c;
-        /* rojo */
-        min-width: 70px;
-        text-align: right;
-      }
-
-      /* Detalle del premio */
-      .premio-detalle {
-        font-size: 1rem;
-        color: #f5f5f5;
-        /* blanco suave */
-        margin: 0;
-      }
-    </style>
-
-
-
 
 
     <!-- SECCIÓN FOTOS -->
@@ -941,74 +681,7 @@
       </div>
     </section>
 
-    <style>
-      /* Fondo y estilo general */
-      #contacto {
-        background-color: #0f0f0f;
-        padding: 50px 20px;
-        border-radius: 12px;
-        max-width: 600px;
-        margin: 0 auto;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-        color: #f5f5f5;
-      }
 
-      /* Título de sección */
-      .seccion-titulo {
-        font-size: 2rem;
-        text-align: center;
-        color: #f5f5f5;
-        margin-bottom: 30px;
-        font-weight: 700;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-      }
-
-      /* Lista de contactos */
-      .contacto-lista {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      /* Cada contacto */
-      .contacto-item {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        padding: 15px 20px;
-        background-color: #1a1a1a;
-        border-left: 5px solid #e67e22;
-        /* borde naranja/dorado para resaltar */
-        border-radius: 8px;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-      }
-
-      .contacto-item:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 6px 15px rgba(255, 255, 255, 0.1);
-      }
-
-      /* Iconos de contacto */
-      .contacto-icon {
-        font-size: 1.5rem;
-        min-width: 40px;
-        text-align: center;
-        color: #e67e22;
-        /* naranja/dorado */
-      }
-
-      /* Links de contacto */
-      .contacto-link {
-        color: #f5f5f5;
-        text-decoration: none;
-        transition: color 0.3s ease;
-      }
-
-      .contacto-link:hover {
-        color: #e67e22;
-      }
-    </style>
 
 
   </main>
