--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <iframe class="lazy-video main-video"
             data-src="https://www.youtube.com/embed/NamRfKTXcIY?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&modestbranding=1&playlist=NamRfKTXcIY"
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen loading="lazy"
-            style="width: 900px; height: 506px; max-width: 98vw; max-height: 60vw; pointer-events: none; display: block; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.7);">
+            style="width: 900px; height: 506px; max-width: 98vw; max-height: 60vw; display: block; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.7);">
           </iframe>
           <div class="video-mask"></div>
         </div>
