--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
         <br>
         <span class="hero-title-sub">músico, bandoneonista</span>
       </div>
+      <!-- Reemplazo del hero video por un video local -->
       <div class="video-background">
         <div class="video-mask-container">
-          <iframe class="lazy-video main-video"
-            data-src="https://www.youtube.com/embed/NamRfKTXcIY?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&modestbranding=1&playlist=NamRfKTXcIY"
-            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen loading="lazy"
-            style="width: 900px; height: 506px; max-width: 98vw; max-height: 60vw; display: block; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.7);">
-          </iframe>
-          <div class="video-mask"></div>
+          <video class="hero-video" controls autoplay muted loop playsinline preload="metadata"
+            poster="santiagosegretFOTOS/01_Fotos/_MG_2076.jpg" disablepictureinpicture disableremoteplayback
+            controlsList="nodownload nofullscreen noremoteplayback">
+            <source src="003-balcon-3.mp4" type="video/mp4">
+            Tu navegador no soporta el elemento de video. Podés descargar el archivo desde el servidor.
+          </video>
         </div>
       </div>
       <div class="inicio-content">
@@ -99,13 +100,12 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/QoU6hMf7368" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Antes creía que este arreglo era de Máximo Mori, pero parece que no lo es. Sería bueno corroborarlo.
-              Yo lo aprendí de la grabación de Di Filippo.</h4>
+            <h4>Desgrabado de la versión de Roberto Di Filippo.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/6aaemoGeQl4" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Versión que armé en base a las instantáneas del maestro Julio Pane.</h4>
+            <h4>Instantáneas del maestro Julio Pane.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/nMwCvczszyI" frameborder="0"
@@ -122,12 +122,12 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Kz_uOJ-k0-I" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Este es un arreglo que hice de sobre una música de los Hermanos Ábalos.</h4>
+            <h4>Este es un arreglo propio sobre una música de los Hermanos Ábalos.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/49N1vSN7yNE" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Bernardo Fingas me invitó a grabar un arreglo suyo.</h4>
+            <h4>Un clásico arreglado por Bernardo Fingas.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/i0bUou53WtE" frameborder="0"
@@ -147,7 +147,7 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/RkqJjs0q8u4" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Arreglo de Piazzolla que grabé en la planta 16.</h4>
+            <h4>Arreglo de Piazzolla que grabé en Planta 16.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/J9glAw7_Cis" frameborder="0"
@@ -185,12 +185,12 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/PIFw3yYBSiA" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Las 15 invenciones a dos voces de bach</h4>
+            <h4>Las 15 invenciones de Bach a dos voces. En bandoneón</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Z65BS4V5QS0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Invención a dos voces de bach</h4>
+            <h4>Invención 8 a dos voces de Bach</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/DfEjFNj88Jg" frameborder="0"
@@ -200,13 +200,12 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MalSKAOZvwg" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Tocando el piano en mi casa</h4>
+            <h4>Tocando el piano</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MfuFe6EvJe0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Estabamos con los Schissi en Panamá en una prueba de sonido y hubo una rato que me quedé solo en la
-              sala con un Stainway y grabe me grabé con el celular</h4>
+            <h4>Grabado en Panamá</h4>
           </div>
         </div>
 
@@ -215,36 +214,35 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/8o278V1rhOQ" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Un cuarteto de cuerdas que grabé yo mismo para la facultad en el '17, con un instrumentos prestados
-              por Guillermo Rubino, Román Peusner y mi papá.</h4>
+            <h4>Cuarteto de cuerdas grabado por Santiago Segret para la facultad en el '17, con un instrumentos
+              prestados por Guillermo Rubino, Román Peusner y Roberto Segret.</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3ALR8Dw1JH8" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Esta es una sonata de piano que hice en segundo año de composición en la UNA y la grabé en la casa del
-              tango un día que el piano estaba bastante desafinado, una pena pero quedo algo</h4>
+            <h4>Sonata para piano realizada para la carrera de composición en la UNA. Grabado en un piano desafinado,
+              una lástima</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/NK-2FgAzlVs" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Una composición vocal que se me dio a muchas voces, no se cuantas pero por momentos hay como 20
-              sonando en algunos momeentos</h4>
+            <h4>Composición vocal a 20 voces</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/oRJ49h56EY" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Una parte de Libro de Bucles, la música que hice para recibirme en la UNA</h4>
+            <h4>Fragmento de Libro de Bucles</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/8kro5nMM7LE" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Una obra musical hecha en mi casa (2025)</h4>
+            <h4>Una obra musical casera</h4>
           </div>
 
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3iCsWEcug30" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4>Un cuarteto de cuerdas con bandoneón de 4 minutos</h4>
+            <h4>Cuarteto de cuerdas con bandoneón</h4>
           </div>
         </div>
 
@@ -689,6 +687,44 @@
     // Eliminado el botón de menú hamburguesa
   </script>
   <script src="scripts.js"></script>
+  <script>
+    // Verificar compatibilidad del elemento <video> con el .mov local.
+    document.addEventListener('DOMContentLoaded', function () {
+      try {
+        var v = document.querySelector('.hero-video');
+        if (!v) return;
+        var canMp4 = v.canPlayType && v.canPlayType('video/mp4') !== '';
+        // Si el navegador no soporta mp4, mostrar fallback visible
+        if (!canMp4) {
+          var container = v.parentElement;
+          var poster = v.getAttribute('poster') || '';
+          var link = document.createElement('a');
+          link.href = '003-balcon-3.mp4';
+          link.textContent = 'Descargar / reproducir 003-balcon-3.mp4';
+          link.style.display = 'inline-block';
+          link.style.color = '#fff';
+          link.style.marginTop = '8px';
+          link.style.textDecoration = 'underline';
+          // Mostrar poster si existe
+          if (poster) {
+            var img = document.createElement('img');
+            img.src = poster;
+            img.alt = 'Imagen del video';
+            img.style.maxWidth = '100%';
+            img.style.borderRadius = '8px';
+            container.innerHTML = '';
+            container.appendChild(img);
+            container.appendChild(link);
+          } else {
+            container.innerHTML = '';
+            container.appendChild(link);
+          }
+        }
+      } catch (e) {
+        console.error('Fallback video check error', e);
+      }
+    });
+  </script>
 </body>
 
 </html>
