--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="#bio">Bio</a></li>
       <li><a href="#fotos">Fotos</a></li>
       <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#rupulo">Rúpulo</a></li>
     </ul>
   </nav>
   <div id="main-content"></div>
@@ -678,6 +679,30 @@
 
       </div>
     </section>
+
+    <!-- SECCIÓN RÚPULO -->
+    <section class="seccion" id="rupulo">
+      <h3 class="seccion-titulo">Rúpulo Ediciones</h3>
+      <div class="rupulo-lista">
+        <div class="rupulo-item">
+          <p class="rupulo-detalle">
+            <strong>Rúpulo Ediciones</strong> es el catálogo de partituras de Santiago Segret, principalmente dedicadas
+            al
+            bandoneón y al tango.
+          </p>
+        </div>
+        <div class="rupulo-item">
+          <p class="rupulo-detalle">
+            <strong>Visitar catálogo:</strong>
+            <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer">
+              rupulo-ediciones.web.app
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
+
+
 
 
 
