--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Santiago Segret, músico y bandoneonista. Descubre su biografía, videos, partituras y más.">
   <title>Santiago Segret - Músico</title>
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -407,7 +407,7 @@
                   con Orientación en Composición en la UNA</strong>.</p>
               <div class="bio-media">
                 <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
-                  allowfullscreen width="280" height="157"></iframe>
+                  allowfullscreen></iframe>
                 <h4 class="epigrafe">"Libro de Bucles" – Trabajo final de la carrera</h4>
               </div>
             </div>
@@ -417,7 +417,7 @@
                 por Raúl Garello, Néstor Marconi y Carlos Cuacci.</p>
               <div class="bio-media">
                 <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0"
-                  allowfullscreen width="280" height="157"></iframe>
+                  allowfullscreen></iframe>
                 <h4 class="epigrafe">Video de Japón con la Orquesta del Tango de la Ciudad</h4>
               </div>
             </div>
@@ -432,9 +432,8 @@
               <p>En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce, junto a grandes maestros
                 como Victor Lavallén, Raúl Garello, Lidia Borda, José Colángelo y Néstor Marconi.</p>
               <div class="bio-media">
-                <img
-                  src="https://firebasestorage.googleapis.com/v0/b/rupulo-ediciones.firebasestorage.app/o/fotos%2Fcon%20emilio%20balcarce%20en%20el%20pante%C3%B3n%20de%20roma.jpg?alt=media&token=9ae060ef-8581-4073-98f4-398f6b357aec"
-                  alt="Foto con Emilio" width="280" loading="lazy">
+                <img src="santiagosegretFOTOS/01_Fotos/con emilio balcarce en el panteón de roma.jpg"
+                  alt="Foto con Emilio" loading="lazy">
                 <h4 class="epigrafe">Foto con Emilio Balcarce en el Panteón de Roma</h4>
               </div>
             </div>
@@ -450,8 +449,8 @@
               <p>En esos años conoció más de 20 países con diferentes grupos, especialmente con la Orquesta de Érica Di
                 Salvo.</p>
               <div class="bio-media">
-                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8" allowfullscreen
-                  width="280" height="157"></iframe>
+                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8"
+                  allowfullscreen></iframe>
                 <h4 class="epigrafe">Mediometraje de la gira a Japón con la Orquesta de Érica Di Salvo</h4>
               </div>
             </div>
@@ -473,9 +472,9 @@
               </p>
               <div class="bio-media inline-media">
                 <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
-                  allowfullscreen width="280" height="157"></iframe>
+                  allowfullscreen></iframe>
                 <img src="santiagosegretFOTOS/01_Fotos/con el marinero montes.jpg" alt="Foto con el Marinero"
-                  width="280" loading="lazy">
+                  loading="lazy">
                 <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
               </div>
             </div>
