--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
       <!-- Se removió el título "Galería de Fotos" -->
       <div class="galeria-fotos">
         <div class="foto">
-          <img src="santiagosegretFOTOS/01_Fotos/con el marinero montes.jpg" alt="Con el Marinero Montes" width="280"
+          <img src="santiagosegretFOTOS/01_Fotos/con el marinero montes.jpg" alt="Con el Marinero Montes"
             loading="lazy">
           <p>Con el Marinero Montes.</p>
         </div>
