--- a/index.html
+++ b/index.html
@@ -355,14 +355,7 @@
             <div class="logro-item">
               <p class="logro-detalle">
                 Profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
-                ciudad de Buenos Aires (desde 2018)
-              </p>
-            </div>
-            <div class="logro-item">
-              <p class="logro-detalle">
-                Es profesor y asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por
-                Ariel Pirotti
-                desde 2010
+                ciudad de Buenos Aires desde 2018
               </p>
             </div>
             <div class="logro-item">
@@ -379,17 +372,20 @@
             </div>
             <div class="logro-item">
               <p class="logro-detalle">
+                Profesor y asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por
+                Ariel Pirotti
+                desde 2010
+              </p>
+            </div>
+            <div class="logro-item">
+              <p class="logro-detalle">
                 Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>
               </p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle">
-                Profesor particular de <strong>bandoneón</strong> y <strong>piano</strong>
-              </p>
-            </div>
-            <div class="logro-item">
-              <p class="logro-detalle">
-                Lleva adelante la editorial propia de partituras <strong>Rúpulo Ediciones</strong>
+                De la práctica músical y la docencia surgen partituras, trabajos que se encuentran publicados en
+                <strong>Rúpulo Ediciones</strong>. Se trata de un archivo fundado por Santiago Segret en 2012.
               </p>
             </div>
           </div>
@@ -402,8 +398,7 @@
           <div class="bio-section bio-margins">
 
             <div class="formacion-item">
-              <p>En 2019 se gradúa con el título de <strong
-                  style="color:#f39c12;background:#222;padding:2px 6px;border-radius:6px;">Licenciado en Artes Musicales
+              <p>En 2019 se gradúa con el título de <strong>Licenciado en Artes Musicales
                   con Orientación en Composición en la UNA</strong>.</p>
               <div class="bio-media">
                 <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
@@ -531,35 +526,55 @@
       <h3 class="seccion-titulo">Premios</h3>
       <div class="premios-lista">
         <div class="premio-item">
-          <span class="premio-ano">2013</span>
+          <span class="premio-ano">2024</span>
           <p class="premio-detalle">
-            <strong>Gardel al Mejor Álbum de Tango:</strong> "Tipas y Tipos" con el Quinteto de Diego Schissi
+            <strong>Grammy Latino al Mejor Álbum de Tango:</strong>
+            <a href="https://open.spotify.com/album/2wabWzvHxIp7DoiYoW5waK?utm_source=chatgpt.com" target="_blank"
+              rel="noopener noreferrer">"Apiazolado"</a>
+            con el Diego Schissi Quinteto
           </p>
         </div>
         <div class="premio-item">
-          <span class="premio-ano">2016</span>
+          <span class="premio-ano">2023</span>
           <p class="premio-detalle">
-            <strong>Gardel al Mejor Álbum de Tango:</strong> "El rejunte" de la Orquesta de Tango de la UNA
+            <strong>Gardel al Mejor Álbum de Folklore:</strong>
+            <a href="https://open.spotify.com/album/64wnAObYHWcXusn5A8fXcl" target="_blank"
+              rel="noopener noreferrer">"Patio Vol. 2"</a> Juan Quintero, Andrés Pilar y Santiago Segret
           </p>
         </div>
         <div class="premio-item">
           <span class="premio-ano">2018</span>
           <p class="premio-detalle">
-            <strong>Gardel al Mejor Álbum de Folklore:</strong> "Patio vol.1" con el trío que comparte con Andrés Pilar
-            y Juan Quintero
+            <strong>Gardel al Mejor Álbum de Folklore:</strong>
+            <a href="https://open.spotify.com/album/5OePvXFX4ztMM9tTXud1uk?utm_source=chatgpt.com" target="_blank"
+              rel="noopener noreferrer">"Patio Vol. 1"</a> Juan Quintero, Andrés Pilar y Santiago Segret
           </p>
         </div>
         <div class="premio-item">
-          <span class="premio-ano">2023</span>
+          <span class="premio-ano">2016</span>
           <p class="premio-detalle">
-            <strong>Grammy Latino al Mejor Álbum de Tango:</strong> "Apiazolado" con el Quinteto de Diego Schissi
+            <strong>Gardel en la categoría Orquesta de Tango Instrumenta:</strong>
+            <a href="https://open.spotify.com/album/474RxN2GuitD351hsAPNbn?utm_source=chatgpt.com" target="_blank"
+              rel="noopener noreferrer">"Timba"</a>
+            con el Diego Schissi Quinteto
           </p>
         </div>
         <div class="premio-item">
-          <span class="premio-ano">2023</span>
+          <span class="premio-ano">2016</span>
           <p class="premio-detalle">
-            <strong>Gardel al Mejor Álbum de Folklore:</strong> "Patio vol.2" con el trío que comparte con Andrés Pilar
-            y Juan Quintero
+            <strong>Gardel al Mejor Álbum de Tango:</strong>
+            <a href="https://open.spotify.com/intl-es/album/2PTXTj8Vr7IEmr80c7e5rJ?utm_source=chatgpt.com"
+              target="_blank" rel="noopener noreferrer">"El rejunte"</a>
+            de la Orquesta de Tango de la UNA
+          </p>
+        </div>
+        <div class="premio-item">
+          <span class="premio-ano">2013</span>
+          <p class="premio-detalle">
+            <strong>Gardel al Mejor Álbum de Tango:</strong>
+            <a href="https://open.spotify.com/intl-es/album/4lkkdErHecpciBcNUEgLHh?utm_source=chatgpt.com"
+              target="_blank" rel="noopener noreferrer">"Tipas y Tipos (En Vivo en Café Vinilo)"</a>
+            con el Diego Schissi Quinteto
           </p>
         </div>
       </div>
@@ -632,7 +647,7 @@
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con mariana rewersky y compania.jpg"
             alt="Con Mariana Rewersky y Compañía" loading="lazy">
-          <p>Con Mariana Rewersky, Victor Villadangos y compañía.</p>
+          <p>Con Mariana Rewersky, Victor Villadangos, David Akerman, Paula Castro.</p>
         </div>
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/en lo de rafa villazón.jpg" alt="En lo de Rafa Villazón"
@@ -641,15 +656,15 @@
         </div>
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/en virasoro.jpg" alt="En Virasoro" loading="lazy">
-          <p>En Virasoro con el Quinteto.</p>
+          <p>En Virasoro con Rubino, Schissi, Grossman y Navarro</p>
         </div>
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/juan y luna.jpg" alt="Juan y Luna" loading="lazy">
-          <p>Con Juan y Luna.</p>
+          <p>Con Juan Quintero y Luna Monti.</p>
         </div>
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con los aca seca.jpg" alt="Con los Aca Seca" loading="lazy">
-          <p>Con los Aca Seca.</p>
+          <p>Con Aca Seca.</p>
         </div>
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con el mono fontana.jpg" alt="Con el Mono Fontana" loading="lazy">
@@ -699,14 +714,11 @@
     <section class="seccion" id="rupulo">
       <h3 class="seccion-titulo">Rúpulo Ediciones</h3>
       <div class="rupulo-lista">
-        <div class="rupulo-item">
+        <div class="rupulo-item rupulo-content">
           <p class="rupulo-detalle">
             <strong>Rúpulo Ediciones</strong> es el catálogo de partituras de Santiago Segret, principalmente dedicadas
-            al
-            bandoneón y al tango.
+            al bandoneón y al tango.
           </p>
-        </div>
-        <div class="rupulo-item">
           <p class="rupulo-detalle">
             <strong>Visitar catálogo:</strong>
             <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer">
