--- a/index.html
+++ b/index.html
@@ -379,13 +379,13 @@
             </div>
             <div class="logro-item">
               <p class="logro-detalle">
-                Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>
+                Es parte del <strong>"Quinteto de Diego Schissi"</strong> desde <strong>2009</strong>
               </p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle">
-                De la práctica músical y la docencia surgen partituras, trabajos que se encuentran publicados en
-                <strong>Rúpulo Ediciones</strong>. Se trata de un archivo fundado por Santiago Segret en 2012.
+                Entre la práctica músical y la docencia surgen partituras, trabajos que se encuentran publicados en
+                <strong>Rúpulo Ediciones</strong>. Se trata de un archivo digital creado por Santiago Segret en 2012.
               </p>
             </div>
           </div>
@@ -413,7 +413,7 @@
               <div class="bio-media">
                 <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0"
                   allowfullscreen></iframe>
-                <h4 class="epigrafe">Video de Japón con la Orquesta del Tango de la Ciudad</h4>
+                <h4 class="epigrafe">En la Usina del Arte con la Orquesta del Tango de la Ciudad</h4>
               </div>
             </div>
 
@@ -478,7 +478,8 @@
               <p>Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de
                 Javier Malosetti en La Trastienda tocando solos de Piazzolla.</p>
               <div class="audio-container">
-                <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
+                <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia", registro sonoro de Raul
+                  Monti</h4>
                 <div class="audio-item">
                   <p><strong>Mi Refugio:</strong></p>
                   <audio id="audio-mi-refugio" preload="metadata">
