--- a/index.html
+++ b/index.html
@@ -739,6 +739,8 @@
   <script>
     // Eliminado el botón de menú hamburguesa
   </script>
+  <!-- Botón global para mutear/desmutear todo el audio de la página -->
+  <button id="global-mute-btn" aria-pressed="false" aria-label="Silenciar todo" title="Silenciar todo">🔈</button>
   <script src="scripts.js"></script>
   <script>
     // Verificar compatibilidad del elemento <video> con el .mov local.
