--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
             </div>
             <div class="logro-item">
               <p class="logro-detalle">
-                Profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong> (desde
-                2013)
+                Profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong> desde
+                2013
               </p>
             </div>
             <div class="logro-item">
@@ -385,7 +385,8 @@
             <div class="logro-item">
               <p class="logro-detalle">
                 Entre la práctica músical y la docencia surgen partituras, trabajos que se encuentran publicados en
-                <strong>Rúpulo Ediciones</strong>. Se trata de un archivo digital creado por Santiago Segret en 2012.
+                <strong>Rúpulo Ediciones</strong>. Se trata de un archivo digital online creado por Santiago Segret en
+                2012.
               </p>
             </div>
           </div>
