--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:description" content="Santiago Segret, músico y bandoneonista. Biografía, videos y partituras.">
   <meta property="og:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
   <meta property="og:url" content="https://santiagosegret.com.ar">
-  <meta name="twitter:cabueno llegue a un punto donde me esta costando muchord" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Santiago Segret - Músico">
   <meta name="twitter:description" content="Santiago Segret, músico y bandoneonista. Biografía, videos y partituras.">
   <meta name="twitter:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
