--- a/index.html
+++ b/index.html
@@ -314,8 +314,7 @@
           <div class="logros-lista">
             <div class="logro-item">
               <p class="logro-detalle">
-                De la enseñanza particular/online y la práctica musical surgen partituras, trabajos que se encuentran publicados en
-                <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer"><strong>Rúpulo Ediciones</strong></a>. Se trata de un archivo digital online creado por Santiago Segret en 2012.
+                Clases privadas de bandoneón, online y presencial. De aquí surgen materiales que se encuentran publicados en <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer"><strong>https://rupulo-ediciones.web.app</strong></a>. Se trata de un archivo digital online creado por Santiago Segret en 2012.
               </p>
             </div>
             <div class="logro-item">
